# ap-tech

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: main.yml
.github/workflows/composite/dependencies/: action.yml
device_monitor/: __init__.py
device_monitor/core/: exceptions.py  mappers.py  repositories.py  threads.py  validators.py
device_monitor/device/: exceptions.py  managers.py  mappers.py  models.py  repositories.py
examples/: simulation.py
tests/: conftest.py  dummy_test.py
tests/core/: exceptions_test.py  validator_test.py  validators_test.py
tests/data/: 1.json  devices.json
tests/device/: conftest.py  exceptions_test.py  managers_test.py  mappers_test.py  models_test.py  repositories.py  repositories_test.py
