[tool.poetry]
name = "device-monitor"
version = "1.0.0"
description = "Monitoring of various devices."
authors = ["Lukasz Zmudzinski <lukasz@zmudzinski.me>"]
readme = "README.md"
packages = [{include = "device_monitor"}]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.7"
mypy = "^1.11.1"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = [
    "device_monitor",
]

[tool.coverage.run]
branch = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
