[tool.poetry]
name = "device-monitor"
version = "1.0.0"
description = "Monitoring of various devices."
authors = ["Lukasz Zmudzinski <lukasz@zmudzinski.me>"]
readme = "README.md"
packages = [{include = "device_monitor"}]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.7"
mypy = "^1.11.1"
pytest = "^8.3.2"
pytest-freezegun = "^0.4.2"
pytest-cov = "^5.0.0"
setuptools = "^72.1.0"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = [
    "F401",  # unused import
]

[tool.mypy]
disallow_untyped_defs = true
disable_error_code = [
    "import-untyped",
    "import-not-found",
]

[tool.pytest.ini_options]
pythonpath = [
    "device_monitor",
]

[tool.coverage.run]
branch = true
omit = [
    "*/__init__.py",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
